--- a/portfolioby__6xxnnk.html
+++ b/portfolioby__6xxnnk.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=
-    , initial-scale=1.0">
-    <title>portfolioby__6xxnnk</title>
-    <link rel="stylesheet" href="css/portfolioby__6xxnnk.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Yunkyung Cho – Portfolio</title>
+  <link rel="stylesheet" href="css/portfolioby__6xxnnk.css" />
 </head>
 <body>
-    <div class="wrap">
-      
+  <div class="wrap">
 
-    <!-- HERO -->
+    <!-- 01. HERO : 검색형 인트로 + 스크롤 내러티브 시작 -->
+     <!-- 01. HERO -->
     <header class="hero" aria-labelledby="heroTitle">
       <div class="hero__inner">
         <h1 id="heroTitle" class="logo" aria-label="portfolio">
@@ -19,11 +18,12 @@
           <span class="f">f</span><span class="o2">o</span><span class="l">l</span><span class="i">i</span><span class="o3">o</span>
         </h1>
 
+        <!-- Search -->
         <form class="search-wrap" id="searchForm" role="search">
           <div class="search-bar">
             <div class="input-area">
               <input id="q" name="q" type="text" aria-label="검색어 입력" autocomplete="off" />
-              <div id="typingGhost" class="typing-ghost" aria-hidden="true"></div>
+              <div id="typingGhost" class="typing-ghost"></div>
             </div>
 
             <div class="select" aria-label="카테고리 선택">
@@ -46,20 +46,266 @@
       </div>
     </header>
 
-    <!-- CONTENT (목표 스크롤 지점) -->
+    <!-- 임시 컨텐츠 -->
     <section id="content">
-      <div class="content__inner">
+      <div class="container">
         <h2>Showcase</h2>
-        <p>
-          여기에 실제 포트폴리오 그리드가 들어갈 자리. 이후 섹션별 JS로
-          필터/정렬/무한스크롤 등을 붙일 예정.
-        </p>
+        <p>검색 버튼 클릭 시 여기로 스무스 스크롤됩니다.</p>
+      </div>
+    </section>
+
+  </div>
+<!-- =========================
+  02. ABOUT ME (Scroll Narrative → 정보 카드형)
+========================= -->
+<section class="about section" id="about" aria-labelledby="aboutTitle">
+  <div class="container">
+    <h2 id="aboutTitle" class="section__title">About Me</h2>
+    <p class="lead" data-reveal>
+      브랜드의 감성과 사용자 경험을 연결하는 콘텐츠·UI 디자이너.  
+      로컬 경험에서 시작해, 전시/콘텐츠/웹퍼블리싱으로 확장했습니다.
+    </p>
+
+    <!-- 상단 요약 -->
+    <div class="about__intro" data-reveal>
+      <div class="about__id">
+        <h3 class="about__name">조윤경 <span class="about__name--sub">Yunkyung Cho</span></h3>
+        <ul class="about__list">
+          <li><strong>Birth</strong> 1996.10.24</li>
+          <li><strong>Email</strong> <a href="mailto:your@email.com">your@email.com</a></li>
+          <li><strong>Base</strong> Busan ↔ Seoul</li>
+        </ul>
+      </div>
+
+      <div class="about__values">
+        <h4 class="about__sub">Character / Values</h4>
+        <ul class="chips">
+          <li class="chip">Curiosity</li>
+          <li class="chip">Perfection</li>
+          <li class="chip">Positivity</li>
+          <li class="chip">Growth</li>
+        </ul>
+        <p class="about__note">트렌드 감지·디테일·협업 커뮤니케이션·빠른 학습을 강점으로 합니다.</p>
+      </div>
+
+      <div class="about__tools">
+        <h4 class="about__sub">Tools</h4>
+        <ul class="tools">
+          <li class="tool"><span>Photoshop</span></li>
+          <li class="tool"><span>Figma</span></li>
+          <li class="tool"><span>HTML · CSS</span></li>
+          <li class="tool"><span>JavaScript</span></li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- 학력/교육 -->
+    <div class="about__grid">
+      <article class="about__card" data-reveal>
+        <h4 class="about__sub">Education</h4>
+        <ul class="timeline">
+          <li>
+            <div class="time">Seoul · Univ.</div>
+            <div class="desc">서울 소재 대학교 진학(상경/인문계 기반) — 로컬/브랜드 경험 확장</div>
+          </li>
+          <li>
+            <div class="time">2025</div>
+            <div class="desc">그린컴퓨터아카데미 경성대점<br/>「트렌디한 UI/UX 반응형 웹제작을 위한 웹퍼블리셔(디자인&코딩)」 수료</div>
+          </li>
+        </ul>
+      </article>
+
+      <!-- 경험(타임라인) -->
+      <article class="about__card" data-reveal>
+        <h4 class="about__sub">Experiences</h4>
+        <ul class="timeline">
+          <li>
+            <div class="time">2022</div>
+            <div class="desc">
+              IT기업 마케팅 담당 — 전시/박람회 기획·운영<br/>
+              (국제인공지능대전, 리테일테크쇼, 부산창업박람회)
+            </div>
+          </li>
+          <li>
+            <div class="time">2023–</div>
+            <div class="desc">
+              Instagram Seeding 콘텐츠 제작 (@6xxnnk)<br/>
+              브랜드 철학과 감정선을 연결하는 피드/촬영/보정/카피
+            </div>
+          </li>
+          <li>
+            <div class="time">2025</div>
+            <div class="desc">
+              Web Publishing & UI/UX 실무 확장(Figma·HTML/CSS/JS, 반응형, 인터랙션)
+            </div>
+          </li>
+        </ul>
+      </article>
+    </div>
+  </div>
+</section>
+
+<!-- =========================
+  03. PROJECTS (카드 + 필터 준비)
+========================= -->
+<section class="projects section" id="works" aria-labelledby="projectsTitle">
+  <div class="container">
+    <h2 id="projectsTitle" class="section__title">Projects</h2>
+    <p class="lead">한눈에 스캔되고, 필요한 케이스만 빠르게 필터링.</p>
+
+    <!-- 필터(후속 js 연결 예정) -->
+    <div class="filters" data-reveal>
+      <button class="filter is-active" data-filter="all">All</button>
+      <button class="filter" data-filter="responsive">Responsive Web</button>
+      <button class="filter" data-filter="figma">Figma Design</button>
+      <button class="filter" data-filter="app">Mobile App</button>
+      <button class="filter" data-filter="retouch">Photoshop</button>
+    </div>
+
+    <div class="cards cards--projects">
+      <!-- Nespresso -->
+      <article class="card project" data-type="responsive" data-reveal>
+        <div class="card__thumb"><img src="img/thumb-nespresso.jpg" alt="Nespresso Redesign" /></div>
+        <div class="card__body">
+          <h3 class="card__title">Nespresso Website Redesign</h3>
+          <p class="card__meta">Responsive Web · HTML/CSS/JS</p>
+          <p class="card__desc">프리미엄 톤&인터랙션 강화 · 반응형</p>
+          <div class="badges"><span class="badge">Responsive</span><span class="badge">Interaction</span></div>
+          <div class="card__cta">
+            <a href="#" class="btn btn--ghost">Case Study</a>
+            <a href="#" class="btn">Live Demo</a>
+          </div>
+        </div>
+      </article>
+
+      <!-- Tamburins -->
+      <article class="card project" data-type="figma" data-reveal>
+        <div class="card__thumb"><img src="img/thumb-tamburins.jpg" alt="Tamburins Redesign" /></div>
+        <div class="card__body">
+          <h3 class="card__title">Tamburins Web Redesign</h3>
+          <p class="card__meta">Figma · 컴포넌트/스타일가이드</p>
+          <p class="card__desc">향의 감정을 시각화한 웹 리디자인</p>
+          <div class="badges"><span class="badge">Figma</span><span class="badge">Styleguide</span></div>
+          <div class="card__cta">
+            <a href="#" class="btn btn--ghost">Figma File</a>
+            <a href="#" class="btn">Case Study</a>
+          </div>
+        </div>
+      </article>
+
+      <!-- Glossier App -->
+      <article class="card project" data-type="app" data-reveal>
+        <div class="card__thumb"><img src="img/thumb-glossier.jpg" alt="Glossier App" /></div>
+        <div class="card__body">
+          <h3 class="card__title">Glossier Mobile App</h3>
+          <p class="card__meta">Figma + Front-end</p>
+          <p class="card__desc">모바일 IA/플로우 + 프론트 연결</p>
+          <div class="badges"><span class="badge">App</span><span class="badge">Prototype</span></div>
+          <div class="card__cta">
+            <a href="#" class="btn btn--ghost">Prototype</a>
+            <a href="#" class="btn">Code</a>
+          </div>
+        </div>
+      </article>
+
+      <!-- Zigzag -->
+      <article class="card project" data-type="app" data-reveal>
+        <div class="card__thumb"><img src="img/thumb-zigzag.jpg" alt="Zigzag Redesign" /></div>
+        <div class="card__body">
+          <h3 class="card__title">Zigzag App Redesign</h3>
+          <p class="card__meta">Product Thinking</p>
+          <p class="card__desc">탐색→결제 전환율 중심 IA 재구성</p>
+          <div class="badges"><span class="badge">App</span><span class="badge">UX Flow</span></div>
+          <div class="card__cta">
+            <a href="#" class="btn btn--ghost">Before/After</a>
+            <a href="#" class="btn">Case Study</a>
+          </div>
+        </div>
+      </article>
+
+      <!-- Photoshop -->
+      <article class="card project" data-type="retouch" data-reveal>
+        <div class="card__thumb"><img src="img/thumb-ps.jpg" alt="Photoshop Works" /></div>
+        <div class="card__body">
+          <h3 class="card__title">Photoshop Mini Works</h3>
+          <p class="card__meta">Retouch · Composite</p>
+          <p class="card__desc">간단하지만 톤앤무드가 분명한 제작물</p>
+          <div class="badges"><span class="badge">Retouch</span></div>
+          <div class="card__cta">
+            <a href="#" class="btn btn--ghost">Gallery</a>
+          </div>
+        </div>
+      </article>
+    </div>
+  </div>
+</section>
+
+    <!-- 04. TABS (탭 기반 UX) : Projects / Instagram Seeding -->
+    <section class="tabs section" id="tabs" aria-labelledby="tabsTitle">
+      <div class="container">
+        <h2 id="tabsTitle" class="section__title">Deep Dives</h2>
+
+        <div class="tabset" data-tabset>
+          <div class="tabset__nav" role="tablist">
+            <button class="tabset__btn is-active" role="tab" data-tab-target="projects">Projects</button>
+            <button class="tabset__btn" role="tab" data-tab-target="seeding">Instagram Seeding</button>
+          </div>
+
+          <!-- Tab: Projects -->
+          <div class="tabset__panel is-active" id="tab-projects" role="tabpanel" data-tab-panel="projects">
+            <ul class="list list--bullets">
+              <li>Nespresso: 반응형 구현 & 인터랙션</li>
+              <li>Tamburins: Figma 컴포넌트 & 스타일가이드</li>
+              <li>Glossier: 모바일 IA/플로우 + 프론트 연결</li>
+              <li>Zigzag: 온보딩 & 검색 최적화 기획</li>
+            </ul>
+          </div>
+
+          <!-- Tab: Instagram Seeding -->
+          <div class="tabset__panel" id="tab-seeding" role="tabpanel" data-tab-panel="seeding">
+            <div class="feeds">
+              <!-- 협찬 피드 카드 예시 -->
+              <article class="feed">
+                <img src="img/feed-1.jpg" alt="Seeding Feed 1" />
+                <div class="feed__body">
+                  <h3>ERA Denim – Ad/Seeding</h3>
+                  <p>룩앤필 설계, 촬영/보정, 캡션 카피라이팅까지 일련의 제작.</p>
+                </div>
+              </article>
+              <article class="feed">
+                <img src="img/feed-2.jpg" alt="Seeding Feed 2" />
+                <div class="feed__body">
+                  <h3>Beauty Collab – Ad/Seeding</h3>
+                  <p>브랜드 감도에 맞춘 페일톤/자연광 무드, 전환 유도 해시태그.</p>
+                </div>
+              </article>
+              <!-- 필요 수량만큼 반복 -->
+            </div>
+            <a href="https://instagram.com/6xxnnk" target="_blank" class="btn">See Instagram</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- 05. CONTACT -->
+    <section class="contact section" id="contact" aria-labelledby="contactTitle">
+      <div class="container">
+        <h2 id="contactTitle" class="section__title">Contact</h2>
+        <p class="lead">Let’s create something meaningful together.</p>
+        <div class="contact__cta">
+          <a href="mailto:your@email.com" class="btn">Email</a>
+          <a href="#" class="btn btn--ghost">PDF Resume</a>
+          <a href="https://instagram.com/6xxnnk" target="_blank" class="btn btn--ghost">Instagram</a>
+        </div>
       </div>
     </section>
 
   </div>
 
-  <!-- 섹션별 스크립트: hero 전용 -->
+  <!-- 섹션별 스크립트 -->
   <script src="js/hero.js" defer></script>
+  <script src="js/projects.js" defer></script>
+  <script src="js/scroll.js" defer></script>
+  <script src="js/tabs.js" defer></script>
 </body>
 </html>
