--- a/portfolioby__6xxnnk.html
+++ b/portfolioby__6xxnnk.html
@@ -7,14 +7,13 @@
   <link rel="stylesheet" href="css/portfolioby__6xxnnk.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Butterfly+Kids&family=Cabin:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
-</head>
+<link href="https://fonts.googleapis.com/css2?family=Butterfly+Kids&family=Cabin:ital,wght@0,400..700;1,400..700&family=Londrina+Solid&display=swap" rel="stylesheet"></head>
 <body>
   <div class="wrap">
+<!-- =========================
+  01. HERO
+========================= -->
 
-<!--  -->
     <header class="hero" aria-labelledby="heroTitle">
   <div class="hero__inner">
     <h1 id="heroTitle" class="logo" aria-label="portfolio">
@@ -50,97 +49,83 @@
       <span class="divider"></span>
     </p>
   </div>
-</header>
+    </header>
+
+
 <!-- =========================
-  02. ABOUT ME (Scroll Narrative → 정보 카드형)
+  02. ABOUT ME 
 ========================= -->
 
-<section class="about section" id="about" aria-labelledby="aboutTitle">
-  <div class="container">
-    <h2 id="aboutTitle" class="section__title">About Me</h2>
-    <p class="lead" data-reveal>
-      브랜드의 감성과 사용자 경험을 연결하는 콘텐츠·UI 디자이너.  
-      로컬 경험에서 시작해, 전시/콘텐츠/웹퍼블리싱으로 확장했습니다.
-    </p>
+<section class="about section about-cvmap" id="about" aria-labelledby="aboutTitle">
+  <div class="container cv-map">
+    <!-- 중앙 타이틀/프로필 -->
+    <div class="cv-center" role="group" aria-label="About me summary" data-reveal>
+      <h2 id="aboutTitle" class="ink-title" aria-label="About me">About me</h2>
 
-    <!-- 상단 요약 -->
-    <div class="about__intro" data-reveal>
-      <div class="about__id">
-        <h3 class="about__name">조윤경 <span class="about__name--sub">Yunkyung Cho</span></h3>
-        <ul class="about__list">
-          <li><strong>Birth</strong> 1996.10.24</li>
-          <li><strong>Email</strong> <a href="mailto:your@email.com">wholovesthesun@naver.com</a></li>
-          <li><strong>Base</strong> Busan ↔ Seoul</li>
-        </ul>
-      </div>
-
-      <div class="about__values">
-        <h4 class="about__sub">Character / Values</h4>
-        <ul class="chips">
-          <li class="chip">Curiosity</li>
-          <li class="chip">Perfection</li>
-          <li class="chip">Positivity</li>
-          <li class="chip">Growth</li>
-        </ul>
-        <p class="about__note">트렌드 감지·디테일·협업 커뮤니케이션·빠른 학습을 강점으로 합니다.</p>
-      </div>
-
-      <div class="about__tools">
-        <h4 class="about__sub">Tools</h4>
-        <ul class="tools">
-          <li class="tool"><span>Photoshop</span></li>
-          <li class="tool"><span>Figma</span></li>
-          <li class="tool"><span>HTML · CSS</span></li>
-          <li class="tool"><span>JavaScript</span></li>
+      <div class="bio">
+        <p><strong>조윤경</strong> Yunkyung Cho</p>
+        <ul class="bio-list">
+          <li>• Email <a href="mailto:wholovesthesun@naver.com">wholovesthesun@naver.com</a></li>
+          <li>• instagram <a href="https://instagram.com/6xxnnk" target="_blank" rel="noopener">@6xxnnk</a></li>
         </ul>
       </div>
     </div>
 
-    <!-- 학력/교육 -->
-    <div class="about__grid">
-      <article class="about__card" data-reveal>
-        <h4 class="about__sub">Education</h4>
-        <ul class="timeline">
-          <li>
-            <div class="time">Seoul · Univ.</div>
-            <div class="desc">서울 소재 대학교 진학(상경/인문계 기반) — 로컬/브랜드 경험 확장</div>
-          </li>
-          <li>
-            <div class="time">2025</div>
-            <div class="desc">그린컴퓨터아카데미 경성대점<br/>「트렌디한 UI/UX 반응형 웹제작을 위한 웹퍼블리셔(디자인&코딩)」 수료</div>
-          </li>
-        </ul>
-      </article>
+    <!-- 상단-좌 : education (가로 타원) -->
+    <article class="bubble oval bubble--edu" aria-labelledby="eduTitle" data-reveal>
+      <h3 id="eduTitle" class="bubble__label">education</h3>
+      <ul class="list-plain">
+      <li>
+        단국대학교 법학과 졸업
+      </li>
+      <li>
+        그린컴퓨터아카데미 : UI/UX반응형 웹제작을 위한 웹퍼블리셔(디자인&코딩) 프론트엔드 과정 수료
+      </li>
+      </ul>
+    </article>
 
-      <!-- 경험(타임라인) -->
-      <article class="about__card" data-reveal>
-        <h4 class="about__sub">Experiences</h4>
-        <ul class="timeline">
-          <li>
-            <div class="time">2022</div>
-            <div class="desc">
-              IT기업 마케팅 담당 — 전시/박람회 기획·운영<br/>
-              (국제인공지능대전, 리테일테크쇼, 부산창업박람회)
-            </div>
-          </li>
-          <li>
-            <div class="time">2023–</div>
-            <div class="desc">
-              Instagram Seeding 콘텐츠 제작 (@6xxnnk)<br/>
-              브랜드 철학과 감정선을 연결하는 피드/촬영/보정/카피
-            </div>
-          </li>
-          <li>
-            <div class="time">2025</div>
-            <div class="desc">
-              Web Publishing & UI/UX 실무 확장(Figma·HTML/CSS/JS, 반응형, 인터랙션)
-            </div>
-          </li>
-        </ul>
-      </article>
-    </div>
+    <!-- 상단-우 : character (가로 타원) -->
+    <article class="bubble oval bubble--char" aria-labelledby="charTitle" data-reveal>
+      <h3 id="charTitle" class="bubble__label">character</h3>
+      <ul class="list-plain">
+        <li >Curiosity: 탐구하는 호기심</li>
+        <li>Perfection: 디테일의 완성도</li>
+        <li>Positivity: 유연한 긍정성</li>
+        <li>Growth: 지속적인 성장</li>
+      </ul>
+    </article>
+
+    <!-- 우측 : experience (세로 큰 타원) -->
+    <article class="bubble oval bubble--exp" aria-labelledby="expTitle" data-reveal>
+      <h3 id="expTitle" class="bubble__label">experience</h3>
+      <ul class="list-plain">
+        <li>와이폴라리스: 사무보조/마케팅</li>
+        <li>기아오토큐 동김해: 문서관리/고객응대</li>
+        <li> IT기업 마케팅 담당 국제인공지능대전, 리테일테크쇼 등 전시 기획 / 콘텐츠 운영</li>
+        <li> sns 협업 콘텐츠, SNS 캠페인</li>
+      </ul>
+    </article>
+
+    <!-- 하단-좌 : social (가로 작은 타원) -->
+    <article class="bubble oval bubble--social" aria-labelledby="socialTitle" data-reveal>
+      <h3 id="socialTitle" class="bubble__label">projects</h3>
+      <ul class="list-plain">
+        <li></li>
+      </ul>
+    </article>
+
+    <!-- 하단-중앙우 : skills (가로 작은 타원) -->
+    <article class="bubble oval bubble--skills" aria-labelledby="skillsTitle" data-reveal>
+      <h3 id="skillsTitle" class="bubble__label">skills</h3>
+      <ul class="list-plain">
+        <li>Photoshop</li>
+        <li>Figma</li>
+        <li>HTML/CSS/JS</li>
+      </ul>
+    </article>
   </div>
 </section>
+
 
 <!-- =========================
   03. PROJECTS (카드 + 필터 준비)
@@ -300,9 +285,11 @@
   </div>
 
   <!-- 섹션별 스크립트 -->
-  <script src="js/hero.js" defer></script>
-  <script src="js/projects.js" defer></script>
-  <script src="js/scroll.js" defer></script>
-  <script src="js/tabs.js" defer></script>
+<script src="js/hero.js" defer></script>
+<script src="js/about-cvmap.js" defer></script>
+<script src="js/about-ink.js" defer></script>
+<script src="js/projects.js" defer></script>
+<script src="js/scroll.js" defer></script>
+<script src="js/tabs.js" defer></script>
 </body>
 </html>
