--- a/portfolioby__6xxnnk.html
+++ b/portfolioby__6xxnnk.html
@@ -151,45 +151,51 @@
     <div class="projects-grid">
 
       <!-- iMac 1: Nespresso -->
-      <div class="imac-shell">
-        <div class="top-panel">
-          <div class="facetime"></div>
-          <div class="display-panel">
-            <img src="img/nespresso-1-vert.jpg" alt="Nespresso Redesign">
-          </div>
+      <!-- iMac 1: Nespresso -->
+<div class="imac-shell">
+  <div class="top-panel">
+    <div class="facetime"></div>
+    <div class="display-panel">
+      <div class="embed-scale-wrap" data-design="1920x1080">
+        <iframe
+          class="site-embed"
+          src="https://6xxnnk.github.io/index/"
+          title="Nespresso Website — by 6xxnnk"
+          loading="lazy"
+        ></iframe>
+        <div class="embed-fallback">
+          <p>브라우저가 임베드를 차단했어요.</p>
+          <a href=" https://6xxnnk.github.io/index/" target="_blank" rel="noopener">새 탭으로 열기 →</a>
         </div>
-        <div class="bottom-panel"><div class="apple-logo"></div></div>
-        <div class="stand"><div class="stand-right"></div><div class="stand-left"></div></div>
       </div>
-      <div class="device-meta">
-        <div>
-          <h3>Nespresso Website Redesign</h3>
-          <p>Responsive Web · HTML/CSS/JS</p>
-        </div>
-        <a class="link" href="https://example.com/nespresso" target="_blank" rel="noopener">홈페이지 보기 →</a>
-      </div>
-
-      <!-- iMac 2: Tamburins -->
-      <div class="imac-shell">
-        <div class="top-panel">
-          <div class="facetime"></div>
-          <div class="display-panel">
-            <img src="img/tamburins-1-vert.jpg" alt="Tamburins Redesign">
-          </div>
-        </div>
-        <div class="bottom-panel"><div class="apple-logo"></div></div>
-        <div class="stand"><div class="stand-right"></div><div class="stand-left"></div></div>
-      </div>
-      <div class="device-meta">
-        <div>
-          <h3>Tamburins Web Redesign</h3>
-          <p>Figma · Styleguide</p>
-        </div>
-        <a class="link" href="https://example.com/tamburins" target="_blank" rel="noopener">홈페이지 보기 →</a>
-      </div>
-
     </div>
   </div>
+  <div class="bottom-panel"><div class="apple-logo"></div></div>
+  <div class="stand"><div class="stand-right"></div><div class="stand-left"></div></div>
+</div>
+
+<!-- iMac 2: Tamburins (원하면 같은 주소 임시로 사용 가능) -->
+<div class="imac-shell">
+  <div class="top-panel">
+    <div class="facetime"></div>
+    <div class="display-panel">
+      <div class="embed-scale-wrap" data-design="1440x900">
+        <iframe
+          class="site-embed"
+          src="https://6xxnnk.github.io/index/"
+          title="Nespresso Website — by 6xxnnk"
+          loading="lazy"
+        ></iframe>
+        <div class="embed-fallback">
+          <p>브라우저가 임베드를 차단했어요.</p>
+          <a href="https://6xxnnk.github.io/index/" target="_blank" rel="noopener">새 탭으로 열기 →</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="bottom-panel"><div class="apple-logo"></div></div>
+  <div class="stand"><div class="stand-right"></div><div class="stand-left"></div></div>
+</div>
 </section>
 
 
@@ -323,11 +329,7 @@
     </div>
   </div>
 </section>
-
-
-<!-- =========================
-     05. 29CM MOBILE APP MOCKUPS
-========================= -->
+<!--  -->
 <section class="cm-section-29" id="cm29">
   <div class="cm-head">
     <h2 class="cm-title">29CM — Mobile App Mockups</h2>
@@ -575,6 +577,7 @@
   <script src="js/hero.js" defer></script>
   <script src="js/about-cvmap.js" defer></script>
   <script src="js/about-ink.js" defer></script>
+  <script src="js/nespresso.js" defer></script>
   <script src="js/projects.js" defer></script>
   <script src="js/projects-devices.js" defer></script>
   <script src="js/glossier-auto-scroll.js" defer></script>
