네스프레소 아이맥 화면 수정완료

--- a/portfolioby__6xxnnk.html
+++ b/portfolioby__6xxnnk.html
@@ -159,7 +159,7 @@
       <div class="embed-scale-wrap" data-design="1920x1080">
         <iframe
           class="site-embed"
-          src="https://6xxnnk.github.io/index/"
+          src="https://6xxnnk.github.io/index/?v=20251106a"
           title="Nespresso Website — by 6xxnnk"
           loading="lazy"
         ></iframe>
@@ -179,7 +179,7 @@
   <div class="top-panel">
     <div class="facetime"></div>
     <div class="display-panel">
-      <div class="embed-scale-wrap" data-design="1440x900">
+      <div class="embed-scale-wrap" data-design="1920x1080">
         <iframe
           class="site-embed"
           src="https://6xxnnk.github.io/index/"
