탬버린즈 아이맥화면 수정완료

--- a/portfolioby__6xxnnk.html
+++ b/portfolioby__6xxnnk.html
@@ -177,43 +177,68 @@
 
   <div class="device-meta">
     <h3>Nespresso Website</h3>
-    <p>Figma + Front-end</p>
+    <p>Figma <br>
+      반응형 웹 퍼블리싱 <br>
+      UI/UX 플로우 설계 및 디자인 시스템 구축 포함 <br>
+      브랜드 아이덴티티 강화 및 사용자 경험 개선 목적
+    </p>
+
     <a class="link" href="https://6xxnnk.github.io/index/" target="_blank" rel="noopener">홈페이지 보기 →</a>
   </div>
 </div>
 
-<!-- iMac 2: Tamburins (Figma Prototype Embed) -->
+
+<!-- Tamburins iMac -->
 <div class="imac-shell">
   <div class="top-panel">
     <div class="facetime"></div>
+
     <div class="display-panel">
-      <div class="embed-scale-wrap" data-design="1920x1080">
-      <iframe
-        class="figma-embed"
-        src="https://www.figma.com/embed?embed_host=share&url=https://www.figma.com/proto/ITm4CrIOfPwxeZ9xGSLQDV/%EC%A1%B0%EC%9C%A4%EA%B2%BD_TAMBURINS%ED%94%BC%EA%B7%B8%EB%A7%88%ED%99%94%EB%A9%B4?node-id=1-7&t=9vRkTfg28ClEPhNe-0&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&hide-ui=1&zoom=1.1"
-        allowfullscreen
-        loading="lazy"
-        title="Tamburins Website — Prototype"
-      ></iframe></div>
+      <!-- 디자인 기준 크기(1920x1080)를 data-design으로 명시 -->
+<div class="embed-scale-wrap" data-design="1920x1080" data-zoom="2.6">  <!-- ← 원하는 기본 zoom -->
+  <iframe
+    class="figma-embed"
+    src="https://www.figma.com/embed?embed_host=share&url=https://www.figma.com/proto/ITm4CrIOfPwxeZ9xGSLQDV/%EC%A1%B0%EC%9C%A4%EA%B2%BD_TAMBURINS%ED%94%BC%EA%B7%B8%EB%A7%88%ED%99%94%EB%A9%B4?node-id=1-7&scaling=min-zoom&zoom=2.6&content-scaling=fixed&page-id=0%3A1&hide-ui=1"
+    title="Tamburins Prototype"
+    allow="fullscreen *; autoplay *; clipboard-write *"
+    sandbox="allow-scripts allow-same-origin allow-forms allow-pointer-lock allow-popups allow-popups-to-escape-sandbox"
+    loading="lazy"
+  ></iframe>
+
+     
 
       <div class="embed-fallback">
         <p>브라우저가 Figma 임베드를 차단했어요.</p>
-        <a href="https://www.figma.com/proto/ITm4CrIOfPwxeZ9xGSLQDV/%EC%A1%B0%EC%9C%A4%EA%B2%BD_TAMBURINS%ED%94%BC%EA%B7%B8%EB%A7%88%ED%99%94%EB%A9%B4?node-id=1-7&t=9vRkTfg28ClEPhNe-0&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1"
-           target="_blank" rel="noopener">새 탭으로 열기 →</a>
+        <a
+          href="https://www.figma.com/proto/ITm4CrIOfPwxeZ9xGSLQDV/%EC%A1%B0%EC%9C%A4%EA%B2%BD_TAMBURINS%ED%94%BC%EA%B7%B8%EB%A7%88%ED%99%94%EB%A9%B4?node-id=1-7&t=9vRkTfg28ClEPhNe-0&scaling=scale-down-width&zoom=1&content-scaling=fixed&page-id=0%3A1"
+          target="_blank" rel="noopener"
+        >새 탭으로 열기 →</a> 
+      </div>
       </div>
     </div>
   </div>
-  <div class="bottom-panel"><div class="apple-logo"></div></div>
+
+  <div class="bottom-panel">
+    <div class="apple-logo"></div></div>
   <div class="stand"><div class="stand-right"></div><div class="stand-left"></div></div>
+
   <div class="device-meta">
-    <h3>Tamburins Website</h3>
-    <p>Figma Prototype</p>
-    <a class="link" href="https://www.figma.com/proto/ITm4CrIOfPwxeZ9xGSLQDV/%EC%A1%B0%EC%9C%A4%EA%B2%BD_TAMBURINS%ED%94%BC%EA%B7%B8%EB%A7%88%ED%99%94%EB%A9%B4?node-id=1-7&t=9vRkTfg28ClEPhNe-0&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1"
-       target="_blank" rel="noopener">프로토타입 보기 →</a>
+    <div>
+      <h3>Tamburins Website</h3>
+      <p>Figma Prototype <br>
+        디자인 시스템 구축 및 UI/UX 플로우 설계 포함 <br>
+        브랜드 아이덴티티 강화 및 사용자 경험 개선 목적</p>
+
+    </div>
+    <a class="link"
+      href="https://www.figma.com/proto/ITm4CrIOfPwxeZ9xGSLQDV/
+      %EC%A1%B0%EC%9C%A4%EA%B2%BD_TAMBURINS%ED%94%BC%EA%B7%B8%EB%A7%88%ED%99%94%EB%A9%B4?node-id=1-7&t=9vRkTfg28ClEPhNe-0&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1"    target="_blank" rel="noopener">프로토타입 보기 →</a>
+      <a class="link"
+      href="https://www.figma.com/proto/ITm4CrIOfPwxeZ9xGSLQDV/%EC%A1%B0%EC%9C%A4%EA%B2%BD_TAMBURINS%ED%94%BC%EA%B7%B8%EB%A7%88%ED%99%94%EB%A9%B4?node-id=1-7&t=9vRkTfg28ClEPhNe-0&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1"    target="_blank" rel="noopener">작업과정 보기 →</a>
   </div>
 </div>
-</section>
 
+</section>
 
 <!-- 2: Glossier — iPhone (1대) -->
       <section class="phones" id="phones">
@@ -498,6 +523,16 @@
           </footer>
         </div>
       </article>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
+        <div class="swiper-pagination"></div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
 
       <!-- LMC -->
       <article class="gallery-item" data-brand="엘엠씨"
@@ -584,13 +619,11 @@
       <div id="lbSwiper" class="swiper ig-lb__swiper">
         <div class="swiper-wrapper"></div>
 
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-button-next"></div>
-        <div class="swiper-pagination"></div>
-      </div>
-    </div>
-  </div>
-</section>
+
+
+
+
+
 
 <!-- 05 Contact Section -->
 <section class="contact">
@@ -603,6 +636,7 @@
     </div>
 </section>
 
+
   </div><!--  -->
 
   <!-- JS (분리 유지) -->
@@ -613,6 +647,7 @@
   <script src="js/nespresso.js" defer></script>
   <script src="js/projects.js" defer></script>
   <script src="js/projects-devices.js" defer></script>
+  <script src="js/tamburins.js" defer></script>
   <script src="js/glossier-auto-scroll.js" defer></script>
   <script src="js/zigzag.js" defer></script>
   <script src="js/cm29-mockups.js" defer></script>
