--- a/portfolioby__6xxnnk.html
+++ b/portfolioby__6xxnnk.html
@@ -41,11 +41,11 @@
             <div class="select" aria-label="카테고리 선택">
               <select id="cat" name="cat" aria-label="All Categories">
                 <option>All Categories</option>
-                <option>Branding</option>
-                <option>UI/UX</option>
+                <option>Introduce</option>
                 <option>Web Publishing</option>
-                <option>Photography</option>
-                <option>Motion</option>
+                <option>App redesign</option>
+                <option>Photoshop</option>
+                <option>personal projects</option>
               </select>
               <span class="caret" aria-hidden="true"></span>
             </div>
