--- a/portfolioby__6xxnnk.html
+++ b/portfolioby__6xxnnk.html
@@ -85,58 +85,64 @@
         <!-- 3x3 그리드로 모든 요소 한 화면에 배치 -->
         <div class="cv-map-grid">
           <article class="bubble oval bubble--bio" aria-labelledby="bioTitle" data-reveal>
-            <h3 id="bioTitle" class="bubble__label">bio</h3>
+            <h3 id="bioTitle" class="bubble__label"></h3>
             <ul class="list-plain">
-              <li><strong>조윤경</strong> Yunkyung Cho</li>
-              <li>“ 감각을 논리로, 감정은 디자인으로 ”</li>
+              <li><strong>조윤경</strong> Yunkyung Cho<br>
+              UI/UX Designer & Creative Strategist</li>
             </ul>
           </article>
-
+          <article class="bubble oval bubble--bio2" aria-labelledby="bio2Title" data-reveal>
+            <h3 id="bio2Title" class="bubble__label">philosophy</h3>
+            <ul class="list-plain"> 
+              <li>브랜드의 감성과 사용자의 경험을 연결하는 인터페이스를 만듭니다</li>
+              <li>데이터와 감각, 논리와 감정이 공존하는 디자인을 지향합니다</li>
+            </ul>
+          </article>
           <article class="bubble oval bubble--edu" aria-labelledby="eduTitle" data-reveal>
             <h3 id="eduTitle" class="bubble__label">education</h3>
             <ul class="list-plain">
               <li>단국대학교 법학과 졸업</li>
-              <li>그린컴퓨터아카데미 UI/UX 반응형 웹제작<br>디자인&코딩 프론트엔드 수료</li>
+              <li><br> 그린컴퓨터아카데미</li>
+              <li> ‘UI/UX 반응형 웹제작을 위한 웹퍼블리셔 프론트엔드' 수료 
+                <br>(HTML·CSS·JS·반응형·Figma 프로토타입 실습 중심)</li>
             </ul>
           </article>
 
           <article class="bubble oval bubble--char" aria-labelledby="charTitle" data-reveal>
             <h3 id="charTitle" class="bubble__label">character</h3>
             <ul class="list-plain">
-              <li>Curiosity: 탐구하는 호기심</li>
-              <li>Perfection: 디테일의 완성도</li>
-              <li>Positivity: 긍정적 사고</li>
-              <li>Growth: 지속적인 성장</li>
+              <li>Curiosity — 새로운 트렌드와 기술에 열린 태도</li>
+              <li>Precision — 디테일을 완성하는 실행력</li>
+              <li>Empathy — 사용자와 브랜드를 이해하는 감각</li>
+              <li>Growth — 스스로 기회를 만드는 성장형 마인드</li>
             </ul>
           </article>
 
           <article class="bubble oval bubble--exp" aria-labelledby="expTitle" data-reveal>
             <h3 id="expTitle" class="bubble__label">experience</h3>
             <ul class="list-plain">
-              <li>~ 2022 와이폴라리스 : IT기업 마케팅 사원
-                <br>(국제인공지능대전/리테일테크쇼 등 전시 기획·콘텐츠 운영)</li>
-                <li> <br> </li>
-              <li>~ 2024 기아오토큐 동김해서비스 
-                <br>  고객응대 및 문서관리</li>
-              <li> <br> </li>
-              <li>~ 2025 브랜드 간 SNS 협업 콘텐츠 다수 제작</li>
+              <li>2022 IT기업 ㈜와이폴라리스 마케팅 사원 <br>
+                  (국제인공지능대전/리테일테크쇼 등 전시 기획 및 콘텐츠 운영)</li>
+              <li><br>2024 기아오토큐 동김해서비스 고객응대 및 문서관리</li>
+              <li><br> 브랜드 협업 SNS 콘텐츠 다수 제작 <br>
+                  (패션·뷰티 브랜드 중심 콘텐츠 디자인 및 운영)</li>
+
             </ul>
           </article>
 
           <article class="bubble oval bubble--social" aria-labelledby="socialTitle" data-reveal>
-            <h3 id="socialTitle" class="bubble__label">social</h3>
-            <ul class="list-plain">
-              <li>Email <a href="mailto:wholovesthesun@naver.com">wholovesthesun@naver.com</a></li>
-              <li>Instagram <a href="https://instagram.com/6xxnnk" target="_blank" rel="noopener">@6xxnnk</a></li>
-            </ul>
+          <h3 id="socialTitle" class="bubble__label">social</h3>
+          <ul class="list-plain">
+            <li>Email <a href="mailto:wholovesthesun@naver.com" class="tooltip-email">wholovesthesun@naver.com</a></li>
+            <li>Instagram <a href="https://instagram.com/6xxnnk" target="_blank" rel="noopener" class="tooltip-insta">@6xxnnk</a></li>
+          </ul>
           </article>
 
           <article class="bubble oval bubble--skills" aria-labelledby="skillsTitle" data-reveal>
             <h3 id="skillsTitle" class="bubble__label">skills</h3>
             <ul class="list-plain">
-              <li>Photoshop</li>
-              <li>Figma</li>
-              <li>HTML/CSS/JS</li>
+              <li>Design: Photoshop, Figma</li>
+              <li>Frontend: HTML, JavaScript</li>
             </ul>
           </article>
         </div>
