--- a/portfolioby__6xxnnk.html
+++ b/portfolioby__6xxnnk.html
@@ -288,7 +288,7 @@
             <ul class="meta-bullets">
               <li><strong>Figma</strong> 프로토타입</li>
               <li><strong>UI/UX 플로우·디자인 시스템</strong> 구축</li>
-              <li>브랜드 아이덴티티 강화 · 사용자 경험 개선</li>
+              <li>브랜드 무드 시각화 · 감각적인 인터랙션 구현</li>
             </ul>
 
             <div class="meta-actions">
