--- a/portfolioby__6xxnnk.html
+++ b/portfolioby__6xxnnk.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="css/tooltips.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-  <script>document.addEventListener('contextmenu', e => e.preventDefault());</script>
+<!--   <script>document.addEventListener('contextmenu', e => e.preventDefault());</script> -->
 </head>
 <body>
   <div class="wrap">
@@ -305,196 +305,78 @@
 
 
 <!-- 2: Glossier — iPhone (1대) -->
-
 <section class="phones" id="phones">
-<div id="glossier" class="glossier">03...</div>
+  <div id="glossier" class="glossier">03...</div>
 
-
-    <!-- ===== Glossier: Onboarding + Live ===== -->
-<div class="phone-row" id="glossier-phones">
-  <!-- 1) 왼쪽: 온보딩 화면 iPhone -->
-  <div class="phone-pair">
-    <div class="frame-base phone-glossier phone-onboarding">
-      <div class="layer2">
-        <div class="screen">
-          <!-- CSS 페이드 전환으로 온보딩 3컷 순환 (이미지 경로 바꿔서 쓰면 됨) -->
-          <div class="onboarding-fader">
-            <img src="./img/glossier/onboarding-1.jpg" alt="Onboarding 1">
-            <img src="./img/glossier/onboarding-2.jpg" alt="Onboarding 2">
-            <img src="./img/glossier/onboarding-3.jpg" alt="Onboarding 3">
+  <div class="phone-row" id="glossier-phones">
+    <!-- 1) 왼쪽: 온보딩 이미지 iPhone -->
+    <div class="phone-pair">
+      <div class="frame-base phone-glossier phone-onboarding">
+        <div class="layer2">
+          <div class="screen">
+            <!-- 단일 온보딩 이미지 -->
+            <img class="onboarding-shot" src="img/글로시에온보딩.jpg" data-design="390x844" alt="Glossier Onboarding" />
           </div>
-        </div><!-- <div class="screen"> -->
-        <div class="mask">
-          <span class="speaker"></span>
-          <span class="camera">
-            <span class="lenz left"></span>
-            <span class="lenz right"></span>
-          </span>
-        </div><!-- <div class="mask"> -->
-      </div><!-- <div class="layer2"> -->
-      <span class="side-button mute"></span>
-      <span class="side-button volume-up"></span>
-      <span class="side-button volume-down"></span>
-      <span class="side-button hold"></span>
-      <span class="port"></span>
-    </div><!-- <div class="frame-base phone-glossier phone-live"> -->
-
-    <!-- 2) 오른쪽: 실제 사이트 접속 iPhone -->
-    <div class="frame-base phone-glossier phone-live">
-      <div class="layer2">
-        <div class="screen">
-          <div class="phone-embed-wrap" data-design="390x844" data-fit="contain">
-            <iframe
-              class="phone-embed"
-              src="https://6xxnnk.github.io/glossier.renewal/"
-              title="Glossier Mobile (Live)"
-              loading="lazy"
-            ></iframe>
+          <div class="mask">
+            <span class="speaker"></span>
+            <span class="camera"><span class="lenz left"></span><span class="lenz right"></span></span>
           </div>
         </div>
-        <div class="mask">
-          <span class="speaker"></span>
-          <span class="camera">
-            <span class="lenz left"></span>
-            <span class="lenz right"></span>
-          </span>
-        </div>
+        <span class="side-button mute"></span>
+        <span class="side-button volume-up"></span>
+        <span class="side-button volume-down"></span>
+        <span class="side-button hold"></span>
+        <span class="port"></span>
       </div>
-      <span class="side-button mute"></span>
-      <span class="side-button volume-up"></span>
-      <span class="side-button volume-down"></span>
-      <span class="side-button hold"></span>
-      <span class="port"></span>
-    </div><!-- <div class="frame-base phone-glossier phone-live"> -->
-  </div><!-- <div class="phone-pair"> -->
 
-  <!-- 3) META 카드: 상세 설명 + 버튼 2개 -->
-  <div class="phone-meta phone-meta--glossier card-meta">
-    <h3>Glossier Mobile</h3>
-    <p class="meta-desc">
-      리브랜딩 무드에 맞춘 iOS 우선 설계 ·
-      온보딩 → 홈 → 상품 탐색 → 결제까지의 핵심 플로우를 간결하게 연결했습니다.<br>
-      <strong>디자인 시스템</strong>(타이포 스케일·그리드·컴포넌트 토큰)과
-      <strong>모션</strong>(부드러운 페이드/슬라이드)을 정의해 실제 앱 느낌을 강화했습니다.
-    </p>
-    <ul class="meta-bullets">
-      <li>히어로·컬렉션·PDP 핵심 컴포넌트 재사용</li>
-      <li>탭바/시트/모달의 일관된 제스처 UX</li>
-      <li>성능 고려: 이미지 크기/지연 로딩 최적화</li>
-    </ul>
-
-    <div class="meta-actions">
-      <a class="meta-btn" href="https://6xxnnk.github.io/glossier.renewal/" target="_blank" rel="noopener">
-        사이트 열기
-      </a>
-      <a class="meta-btn meta-btn--ghost" href="https://your-notion-or-docs-link.example" target="_blank" rel="noopener">
-        작업과정 보기
-      </a>
-    </div><!-- <div class="meta-actions"> -->
-  </div><!-- <div class="phone-meta phone-meta--glossier card-meta"> -->
-</div><!-- <div class="phone-pair"> -->
-
-</div><!-- <div class="phone-row"> -->
-
-
-<!-- 3 zigzag -->
-<div id="zigzag" class="glossier">04...</div>
-<section class="proj proj--zigzag-v2" id="zigzag">
-
-  <div class="zz-layout">
-    <!-- 왼쪽: 2x2 썸네일 -->
-    <div class="zz-left" id="zzThumbs">
-      <button class="zz-thumb is-active" data-target="1" aria-label="썸네일 1">
-        <img src="img/zigzag-HOME.jpg" alt="">
-        <span class="dot">1</span>
-      </button>
-      <button class="zz-thumb" data-target="2" aria-label="썸네일 2">
-        <img src="img/zigzag-PRODUCT.jpg" alt="">
-        <span class="dot">2</span>
-      </button>
-      <button class="zz-thumb" data-target="3" aria-label="썸네일 3">
-        <img src="img/zigzag-ORDER.jpg" alt="">
-        <span class="dot">3</span>
-      </button>
-      <button class="zz-thumb" data-target="4" aria-label="썸네일 4">
-        <img src="img/zigzag-MYPAGE.jpg " alt="">
-        <span class="dot">4</span>
-      </button>
+      <!-- 2) 오른쪽: 실제 사이트 iPhone -->
+      <div class="frame-base phone-glossier phone-live">
+        <div class="layer2">
+          <div class="screen">
+            <div class="phone-embed-wrap" data-design="390x844" data-fit="contain">
+              <iframe
+                class="phone-embed"
+                src="https://6xxnnk.github.io/glossier.renewal/"
+                title="Glossier Mobile (Live)"
+                loading="lazy"
+              ></iframe>
+            </div>
+          </div>
+          <div class="mask">
+            <span class="speaker"></span>
+            <span class="camera"><span class="lenz left"></span><span class="lenz right"></span></span>
+          </div>
+        </div>
+        <span class="side-button mute"></span>
+        <span class="side-button volume-up"></span>
+        <span class="side-button volume-down"></span>
+        <span class="side-button hold"></span>
+        <span class="port"></span>
+      </div>
     </div>
 
-    <!-- 오른쪽: 각 썸네일에 대응하는 슬라이더 4개 중 1개만 표시 -->
-    <div class="zz-right" id="zzRight">
-      <!-- S1 -->
-      <div class="zz-swiper is-active" data-id="1">
-        <div class="swiper" id="zz-s1">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide"><img src="img/zigzag-HOME-mockip.png" alt=""></div>
-            <div class="swiper-slide"><img src="img/zigzag-PRODUCT-mockip.png" alt=""></div>
-          </div>
-          <div class="swiper-button-prev"></div>
-          <div class="swiper-button-next"></div>
-        </div>
-      </div>
+    <!-- 3) META 카드 -->
+    <div class="phone-meta phone-meta--glossier g-card-meta">
+      <h3>Glossier Mobile</h3>
+      <p class="meta-desc">
+        리브랜딩 무드에 맞춘 iOS 우선 설계 <br>
+        홈 → 상품 탐색 → 결제까지 핵심 플로우를 간결하게 연결 <br>
+        <strong>디자인 시스템</strong>(타이포·그리드·토큰)과 <strong>모션</strong>으로 실제 앱 감도 강화
+      </p>
 
-      <!-- S2 -->
-      <div class="zz-swiper" data-id="2">
-        <div class="swiper" id="zz-s2">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide"><img src="img/zigzag-PRODUCT-mockip.png" alt=""></div>
-            <div class="swiper-slide"><img src="img/zigzag-ORDER-mockip.png" alt=""></div>
-          </div>
-          <div class="swiper-button-prev"></div>
-          <div class="swiper-button-next"></div>
-        </div>
-      </div>
-
-      <!-- S3 -->
-      <div class="zz-swiper" data-id="3">
-        <div class="swiper" id="zz-s3">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide"><img src="img/zigzag-ORDER-mockip.png" alt=""></div>
-            <div class="swiper-slide"><img src="img/zigzag-MYPAGE-mockip.png" alt=""></div>
-          </div>
-          <div class="swiper-button-prev"></div>
-          <div class="swiper-button-next"></div>
-        </div>
-      </div>
-
-      <!-- S4 -->
-      <div class="zz-swiper" data-id="4">
-        <div class="swiper" id="zz-s4">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide"><img src="img/zigzag-MYPAGE-mockip.png" alt=""></div>
-            <div class="swiper-slide"><img src="img/zigzag-HOME-mockip.png" alt=""></div>
-          </div>
-          <div class="swiper-button-prev"></div>
-          <div class="swiper-button-next"></div>
-        </div>
+      <div class="meta-actions">
+        <a class="meta-btn" href="https://6xxnnk.github.io/glossier.renewal/" target="_blank" rel="noopener">사이트 열기</a>
+        <a class="meta-btn meta-btn--ghost" href="https://your-notion-or-docs-link.example" target="_blank" rel="noopener">작업과정 보기</a>
       </div>
     </div>
   </div>
-
-  <div class="phone-meta phone-meta--zigzag">
-  <h3>ZIGGZAG Mobile</h3>
-  <p>기존 홈/탐색/상세/체크아웃 플로우의 밀도·가독성·전환 요소를 재배치 <br>
-        스크롤 피로를 낮추고, 필터/정렬 접근성을 높임 <br>
-        상세에서 비주얼–리뷰–옵션 순서를 재구성해 CTA 도달률을 개선</p>
-  <a class="link" href="https://6xxnnk.github.io/zigzag.renewal/" target="_blank" rel="noopener">사이트 열기 →</a>
-
 </section>
-
-
 
 
 
 <!--4. 29cm -->
 <section class="cm-section-29" id="cm29">
-  <div id="29CM" class="glossier">05...</div>
-  <div class="cm-head">
-    <h2 class="cm-title">29CM — Mobile App Mockups</h2>
-    <small class="cm-sub">hover = pause · auto spin</small>
-  </div>
-
+  <div id="29CM" class="glossier">04...</div>
   <div class="cm-row">
     <!-- 1 -->
     <figure class="cm-phone">
@@ -751,18 +633,26 @@
   <!-- JS (분리 유지) -->
   <script src="js/cursor-sun.js" defer></script>
   <script src="js/click.js" defer></script>
+
   <script src="js/hero.js" defer></script>
   <script src="js/about-cvmap.js" defer></script>
   <script src="js/about-ink.js" defer></script>
+
   <script src="js/nespresso.js" defer></script>
   <script src="js/draggable-meta.js"></script>
+
   <script src="js/projects.js" defer></script>
   <script src="js/projects-devices.js" defer></script>
   <script src="js/tamburins.js" defer></script>
-  <script src="js/glossier-auto-scroll.js" defer></script>
+
+  <script src="js/glossier.js"></script>
+
   <script src="js/zigzag.js" defer></script>
+
   <script src="js/cm29-mockups.js" defer></script>
+
   <script src="js/instagram-lightbox.js" defer></script>
+
   <script src="js/collabs.js" defer></script>
 
 </body>
