--- a/portfolioby__6xxnnk.html
+++ b/portfolioby__6xxnnk.html
@@ -165,7 +165,7 @@
 
     <!-- ========== Project 01: Nespresso ========== -->
     <section class="project project--nespresso">
-      <div id="nespresso" class="nespresso">...01</div>
+      <div id="nespresso" class="nespresso">.</div>
 
       <div class="device--imac">
         <!-- iMac 본체 -->
@@ -220,7 +220,7 @@
             </ul>
 
             <div class="meta-actions">
-              <a class="meta-btn" href="https://6xxnnk.github.io/index/" target="_blank" rel="noopener">홈페이지 보기 →</a>
+              <a class="meta-btn" href="https://6xxnnk.github.io/index/" target="_blank" rel="noopener">홈페이지 보기 </a>
               <a class="meta-btn meta-btn--ghost" href="https://example.com/nespresso-process" target="_blank" rel="noopener">작업과정 보기</a>
             </div>
           </div>
@@ -229,84 +229,84 @@
     </section>
 
     <!-- ========== Project 02: Tamburins ========== -->
-    <section class="project project--tamburins">
-      <div id="tamburins" class="nespresso">...02</div>
+ <section class="project project--tamburins">
+  <div id="tamburins" class="nespresso">..</div>
 
-      <div class="device--imac">
-        <!-- iMac 본체 -->
-        <div class="imac-shell">
-          <div class="top-panel">
-            <div class="facetime"></div>
+  <div class="device--imac">
+    <!-- iMac 본체 -->
+    <div class="imac-shell">
+      <div class="top-panel">
+        <div class="facetime"></div>
 
-            <div class="display-panel">
-              <!-- 디자인 기준 크기(1920x1080)를 data-design으로 명시 -->
-              <div class="embed-scale-wrap" data-design="1920x1080" data-zoom="2.6">
-                <iframe
-                  class="figma-embed"
-                  src="https://www.figma.com/embed?embed_host=share&url=https://www.figma.com/proto/ITm4CrIOfPwxeZ9xGSLQDV/%EC%A1%B0%EC%9C%A4%EA%B2%BD_TAMBURINS%ED%94%BC%EA%B7%B8%EB%A7%88%ED%99%94%EB%A9%B4?node-id=1-7&scaling=min-zoom&zoom=2.6&content-scaling=fixed&page-id=0%3A1&hide-ui=1"
-                  title="Tamburins Prototype"
-                  allow="fullscreen *; autoplay *; clipboard-write *"
-                  sandbox="allow-scripts allow-same-origin allow-forms allow-pointer-lock allow-popups allow-popups-to-escape-sandbox"
-                  loading="lazy"
-                ></iframe>
-
-                <div class="embed-fallback">
-                  <p>브라우저가 Figma 임베드를 차단했어요.</p>
-                  <a
-                    href="https://www.figma.com/proto/ITm4CrIOfPwxeZ9xGSLQDV/%EC%A1%B0%EC%9C%A4%EA%B2%BD_TAMBURINS%ED%94%BC%EA%B7%B8%EB%A7%88%ED%99%94%EB%A9%B4?node-id=1-7&t=9vRkTfg28ClEPhNe-0&scaling=scale-down-width&zoom=1&content-scaling=fixed&page-id=0%3A1"
-                    target="_blank" rel="noopener"
-                  >새 탭으로 열기 →</a>
-                </div>
-              </div>
-            </div>
+        <div class="display-panel">
+          <!-- ✅ 심플/안정: 고정 비율 래퍼 + 100% iframe -->
+          <div class="figma-responsive">
+            <iframe
+              class="figma-frame"
+              title="Tamburins Prototype"
+              src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FITm4CrIOfPwxeZ9xGSLQDV%2F%25EC%25A1%25B0%25EC%259C%25A4%25EA%25B2%25BD_TAMBURINS%25ED%2594%25BC%25EA%25B7%25B8%25EB%25A7%2588%25ED%2599%2594%25EB%25A9%25B4%3Fnode-id%3D1-7%26page-id%3D0%253A1%26scaling%3Dscale-down-width%26content-scaling%3Dfixed%26hide-ui%3D1"
+              allowfullscreen
+              loading="lazy"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allow="clipboard-write; autoplay"
+              sandbox="allow-same-origin allow-scripts allow-forms allow-pointer-lock allow-popups allow-presentation"
+            ></iframe>
           </div>
 
-          <div class="bottom-panel">
-            <div class="apple-logo"></div>
-          </div>
-          <div class="stand">
-            <div class="stand-right"></div>
-            <div class="stand-left"></div>
-          </div>
-        </div>
-
-        <!-- ⚡ 팝업 (드래그 가능 + 오른쪽 하단 고정) -->
-        <div class="floating-window floating-window--imac-br"
-             role="dialog"
-             aria-labelledby="tamburinsWinTitle"
-             data-draggable>
-          <div class="window-header" data-drag-handle>
-            <h4 id="tamburinsWinTitle" class="window-title">Tamburins Prototype</h4>
-            <div class="window-controls" aria-hidden="true">
-              <span class="window-minimize"></span>
-              <span class="window-maximize"></span>
-              <span class="window-close"></span>
-            </div>
-          </div>
-
-          <div class="window-content">
-            <ul class="meta-bullets">
-              <li><strong>Figma</strong> 프로토타입</li>
-              <li><strong>UI/UX 플로우·디자인 시스템</strong> 구축</li>
-              <li>브랜드 무드 시각화 · 감각적인 인터랙션 구현</li>
-            </ul>
-
-            <div class="meta-actions">
-              <a class="meta-btn" href="https://www.figma.com/proto/ITm4CrIOfPwxeZ9xGSLQDV/%EC%A1%B0%EC%9C%A4%EA%B2%BD_TAMBURINS%ED%94%BC%EA%B7%B8%EB%A7%88%ED%99%94%EB%A9%B4?node-id=1-7&t=9vRkTfg28ClEPhNe-0&scaling=scale-down-width&zoom=1&content-scaling=fixed&page-id=0%3A1" target="_blank" rel="noopener">프로토타입 보기 →</a>
-              <a class="meta-btn meta-btn--ghost" href="https://example.com/tamburins-process" target="_blank" rel="noopener">작업과정 보기</a>
-            </div>
+          <!-- Fallback: 차단/오류 시 노출 -->
+          <div class="embed-fallback">
+            <p>브라우저가 Figma 임베드를 차단했어요.</p>
+            <a
+              href="https://www.figma.com/proto/ITm4CrIOfPwxeZ9xGSLQDV/%EC%A1%B0%EC%9C%A4%EA%B2%BD_TAMBURINS%ED%94%BC%EA%B7%B8%EB%A7%88%ED%99%94%EB%A9%B4?node-id=1-7&t=9vRkTfg28ClEPhNe-0&scaling=scale-down-width&zoom=1&content-scaling=fixed&page-id=0%3A1"
+              target="_blank" rel="noopener"
+            >새 탭으로 열기 →</a>
           </div>
         </div>
       </div>
-    </section>
 
+      <div class="bottom-panel">
+        <div class="apple-logo"></div>
+      </div>
+      <div class="stand">
+        <div class="stand-right"></div>
+        <div class="stand-left"></div>
+      </div>
+    </div>
+
+    <!-- ⚡ 팝업 (드래그 가능 + 오른쪽 하단 고정) -->
+    <div class="floating-window floating-window--imac-br"
+         role="dialog"
+         aria-labelledby="tamburinsWinTitle"
+         data-draggable>
+      <div class="window-header" data-drag-handle>
+        <h4 id="tamburinsWinTitle" class="window-title">Tamburins Prototype</h4>
+        <div class="window-controls" aria-hidden="true">
+          <span class="window-minimize"></span>
+          <span class="window-maximize"></span>
+          <span class="window-close"></span>
+        </div>
+      </div>
+
+      <div class="window-content">
+        <ul class="meta-bullets">
+          <li><strong>Figma</strong> 프로토타입</li>
+          <li><strong>UI/UX 플로우·디자인 시스템</strong> 구축</li>
+          <li>브랜드 무드 시각화 · 감각적인 인터랙션 구현</li>
+        </ul>
+
+        <div class="meta-actions">
+          <a class="meta-btn" href="https://www.figma.com/proto/ITm4CrIOfPwxeZ9xGSLQDV/%EC%A1%B0%EC%9C%A4%EA%B2%BD_TAMBURINS%ED%94%BC%EA%B7%B8%EB%A7%88%ED%99%94%EB%A9%B4?node-id=1-7&t=9vRkTfg28ClEPhNe-0&scaling=scale-down-width&zoom=1&content-scaling=fixed&page-id=0%3A1" target="_blank" rel="noopener">프로토타입 보기 </a>
+          <a class="meta-btn meta-btn--ghost" href="https://example.com/tamburins-process" target="_blank" rel="noopener">작업과정 보기</a>
+        </div>
+      </div>
+    </div>
   </div>
-</div>
+</section>
 
 
 <!-- 2: Glossier — iPhone (1대) -->
 <section class="phones" id="phones">
-  <div id="glossier" class="glossier">03...</div>
+  <div id="glossier" class="glossier">...</div>
 
   <div class="phone-row" id="glossier-phones">
     <!-- 1) 왼쪽: 온보딩 이미지 iPhone -->
@@ -333,7 +333,7 @@
       <div class="frame-base phone-glossier phone-live">
         <div class="layer2">
           <div class="screen">
-            <div class="phone-embed-wrap" data-design="390x844" data-fit="contain">
+            <div class="phone-embed-wrap" data-design="390x844" data-zoom="1">
               <iframe
                 class="phone-embed"
                 src="https://6xxnnk.github.io/glossier.renewal/"
@@ -357,7 +357,7 @@
 
     <!-- 3) META 카드 -->
     <div class="phone-meta phone-meta--glossier g-card-meta">
-      <h3>Glossier Mobile</h3>
+      <h3>Glossier Mobile App</h3>
       <p class="meta-desc">
         리브랜딩 무드에 맞춘 iOS 우선 설계 <br>
         홈 → 상품 탐색 → 결제까지 핵심 플로우를 간결하게 연결 <br>
@@ -373,10 +373,113 @@
 </section>
 
 
+<section class="proj proj--zigzag-v2" id="zigzag">
+  <div class="zigzag">....</div>
+
+  <div class="zz-layout">
+    <!-- 왼쪽: 2x2 썸네일 -->
+    <div class="zz-left" id="zzThumbs">
+      <button class="zz-thumb is-active" data-target="1" aria-label="썸네일 1">
+        <img src="img/zigzag-HOME.jpg" alt="">
+        <span class="dot">1</span>
+      </button>
+      <button class="zz-thumb" data-target="2" aria-label="썸네일 2">
+        <img src="img/zigzag-PRODUCT.jpg" alt="">
+        <span class="dot">2</span>
+      </button>
+      <button class="zz-thumb" data-target="3" aria-label="썸네일 3">
+        <img src="img/zigzag-mypage.jpg" alt="">
+        <span class="dot">3</span>
+      </button>
+      <button class="zz-thumb" data-target="4" aria-label="썸네일 4">
+        <img src="img/zigzag-ORDER.jpg" alt="">
+        <span class="dot">4</span>
+      </button>
+    </div>
+
+    <!-- 오른쪽: 각 썸네일에 대응하는 슬라이더 4개 중 1개만 표시 -->
+    <div class="zz-right" id="zzRight">
+      <!-- S1 -->
+      <div class="zz-swiper is-active" data-id="1">
+        <div class="swiper" id="zz-s1">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide"><img src="img/zigzag-HOME-mockip.png" alt=""></div>
+            <div class="swiper-slide"><img src="img/zigzag-PRODUCT-mockip.png" alt=""></div>
+          </div>
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div>
+        </div>
+      </div>
+
+      <!-- S2 -->
+      <div class="zz-swiper" data-id="2">
+        <div class="swiper" id="zz-s2">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide"><img src="img/zigzag-PRODUCT-mockip.png" alt=""></div>
+            <div class="swiper-slide"><img src="img/zigzag-ORDER-mockip.png" alt=""></div>
+          </div>
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div>
+        </div>
+      </div>
+
+      <!-- S3 -->
+      <div class="zz-swiper" data-id="3">
+        <div class="swiper" id="zz-s3">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide"><img src="img/zigzag-ORDER-mockip.png" alt=""></div>
+            <div class="swiper-slide"><img src="img/zigzag-MYPAGE-mockip.png" alt=""></div>
+          </div>
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div>
+        </div>
+      </div>
+
+      <!-- S4 -->
+      <div class="zz-swiper" data-id="4">
+        <div class="swiper" id="zz-s4">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide"><img src="img/zigzag-MYPAGE-mockip.png" alt=""></div>
+            <div class="swiper-slide"><img src="img/zigzag-HOME-mockip.png" alt=""></div>
+          </div>
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- ZigZag Meta Card -->
+<div class="zz-meta phone-meta g-card-meta2 zz-meta--coral">
+  <!-- 상단 라벨(에디토리얼 리본) -->
+  <span class="zz-label" aria-hidden="true">EDITORIAL</span>
+
+  <!-- 지그재그 데코 스트립 -->
+  <span class="zz-deco" aria-hidden="true"></span>
+
+  <h3 class="zz-title">ZigZag App Redesign</h3>
+  <p class="meta-desc">
+    탐색 → 상품 → 결제로 이어지는 <strong>핵심 플로우를 간결화</strong>한 모바일 리디자인.
+  </p>
+
+  <ul class="meta-bullets">
+    <li>카테고리/필터 구조 재배치로 <strong>탐색 경로 단축</strong></li>
+    <li>과도한 팝업 대신 <strong>개인맞춤화</strong> 컨텐츠 중심</li>
+    <li>최대할인가 표기로 <strong>합리적 구매 유도</strong></li>
+  </ul>
+
+  <div class="meta-actions">
+    <a class="meta-btn" href="https://your-prototype.example" target="_blank" rel="noopener">
+      작업과정 보기
+    </a>
+  </div>
+</div>
+
+</section>
+
 
 <!--4. 29cm -->
 <section class="cm-section-29" id="cm29">
-  <div id="29CM" class="glossier">04...</div>
+  <div id="29CM" class="glossier">.....</div>
   <div class="cm-row">
     <!-- 1 -->
     <figure class="cm-phone">
